# bored-crow

./: .gitignore
desktop/: Cargo.toml  wintest.sh
desktop/.cargo/: config.toml
desktop/src/: error.rs  lib.rs  logic.rs  main.rs
desktop/src/core/: mod.rs
desktop/src/core/block_config/: mod.rs  time_range.rs  timer.rs
desktop/src/logic/: apps.rs  blocker.rs
desktop/src/platform/: apps.rs  blocker.rs  linux.rs  mod.rs  windows.rs
desktop/src/platform/apps/: mod.rs  windows.rs
desktop/src/platform/linux/: apps.rs  blocker.rs  mod.rs
desktop/src/ui/: config.rs  configg.rs  gui.rs  mod.rs
desktop/src/ui/gui/: mod.rs
desktop/src/ui/gui/modal/: app_list.rs  mod.rs
desktop/src/ui/gui2/: mod.rs
desktop/src/ui/gui2/block/: mod.rs
desktop/src/ui/gui2/block/guigroup/: mod.rs
desktop/src/ui/gui2/block/guigroup/block_config/: mod.rs  (+1 more)
desktop/src/ui/gui2/block/manage_guigroup/: mod.rs
desktop/src/ui/gui2/block/new_group/: mod.rs
desktop/src/ui/gui2/modal/: mod.rs  new_guigroup.rs
desktop/src/ui/gui2/settings/: mod.rs
desktop2/gui/: Cargo.toml
desktop2/gui/src/: main.rs
desktop2/gui/src/iced_gui/: action.rs  mod.rs
desktop2/gui/src/iced_gui/block/: mod.rs
desktop2/gui/src/iced_gui/block/block_rules/: mod.rs  timer.rs
desktop2/gui/src/iced_gui/block/guigroup/: mod.rs
desktop2/gui/src/iced_gui/block/manage_guigroup/: mod.rs
desktop2/gui/src/iced_gui/saved_state/: mod.rs
desktop2/gui/src/iced_gui/settings/: mod.rs
desktop2/platform/: Cargo.toml
desktop2/platform/src/: lib.rs
desktop2/platform/src/apps/: mod.rs  rest.rs  windows.rs
(+22 files in other folders)
