[package]
name = "desktop"
version = "0.1.0"
edition = "2024"
default-run = "desktop"

[dependencies]
anyhow = "1.0.102"
iced = {version = "0.14.0", features = ["advanced"]}
sysinfo = "0.37.2"
tokio = {version = "1.49.0", features = ["full"]}

[target."cfg(not(windows))".dependencies]
applications = "0.3.1"

[target."cfg(windows)".dependencies]
app-finder = "=0.1.0"
winreg = "0.55.0"

[features]
error = []