[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
directories = "6.0.0"
engine = { path = "../engine" }
iced = { version = "0.14.0", features = ["advanced", "tokio"] }
platform = { path = "../platform" }
screen_size = "0.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
state_disk = { path = "../state_disk" }
tokio = { workspace = true, features = ["fs", "time"]}
utils = { path = "../utils" }